# apl

./: Cargo.toml
crates/apl_derive/: Cargo.toml
crates/apl_derive/src/: lib.rs
crates/error/: Cargo.toml
crates/error/src/: lexerror.rs  lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: core.rs  declarations.rs  expressions.rs  lib.rs  statements.rs
crates/parser/src/ast/: mod.rs  node.rs
crates/parser/src/ast/expressions/: binary.rs  mod.rs  unary.rs  variable.rs
crates/parser/src/ast/statements/: function.rs  mod.rs  variable_decl.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: core.rs  lib.rs  position.rs  scanner.rs  tokens.rs
crates/scanner/src/modes/: comment.rs  mod.rs  normal.rs  string.rs
src/: env.rs  lib.rs  main.rs  utils.rs  val.rs
src/parser/: mod.rs
src/parser/ast_nodes/: binding.rs  expression.rs  mod.rs  numbers.rs  operators.rs
